# gfx

./: .gitignore  .gitmodules  CMakeLists.txt  features.md  readme.md  todo.md
libBuild/hdr/: attribute.hpp  camera.hpp  clipspace.hpp  defines.hpp  gfx.hpp  imageio.hpp  imageload.hpp  meshloader.hpp  screenshot.hpp  shader.hpp  shadercore.hpp  texturebuilder.hpp
libBuild/hdr/buffers/: attribute.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  meshanimation.hpp  scenecamera.hpp  scenegraph.hpp  scenelight.hpp  scenetexture.hpp  texture.hpp  ubo.hpp  vao.hpp  vbo.hpp
libBuild/src/: camera.cpp  clipspace.cpp  gfx.cpp  imageio.cpp  imageload.cpp  meshloader.cpp  screenshot.cpp  shader.cpp  shadercore.cpp  texturebuilder.cpp  vao.cpp
libBuild/src/buffers/: image.cpp  texture.cpp  ubo.cpp  vao.cpp  vbo.cpp
thirdpartynongit/glad/: CMakeLists.txt
